# model-training

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO  config.kdl.example  run-in-docker.sh  run.sh
docker/: run.sh
download-dataset/: Pipfile  config.kdl.example  download-dataset.py  pyproject.toml
export-onnx/: .gitignore  export.py  export.sh  pyproject.toml
export-rknn/: .gitignore  Pipfile  export.py
onnx-to-rknn/: .gitignore  Pipfile  convert.py  gen-quant-images-txt.sh  pyproject.toml
run/: run.py
run-cpu/: Pipfile  pyproject.toml  run.py
run-rknn/: Pipfile  run.py
train/: .gitignore  Pipfile  pyproject.toml  train.py  train.sh  verify-rocm.py
train/yolo-config/: settings.json
verify-rocm/: Pipfile  pyproject.toml  verify-rocm.py
