[project]
name = "verify-rocm"
version = "0.0.1"
description = "verify ROCM"
requires-python = ">=3.11"
dependencies = [
	"torch==2.6.0+rocm6.2.4",
	"pytorch-triton-rocm",
	"numpy"
]

[tool.uv.sources]
torch = {index = "pytorch"}
pytorch-triton-rocm = {index = "pytorch"}
numpy = {index = "pytorch"}

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/rocm6.2.4"
default = false
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
